--- a/mad1.html
+++ b/mad1.html
@@ -5,9 +5,9 @@
 <b> HAPPY BIRTHDAY TO YOU.... HAPPY BIRTHDAY TO YOU....</b></marquee>
 </head>
 <body bgcolor="lavender">
-<center><img src="https://lh3.googleusercontent.com/dFnQvJAE3xl_bcNS7xx1f3i3qGlzRGQNRxCIb567VHyqCmDOzyp9h8MmF60UyjpZcCeEmXmv22gaeUB1Nu0p88HYdU9d3AgTAhVvJGPNrAjZooAbaUfqVdsXB_M-KzdNZpBIr9UWs6uixvUaGAIq6VJJLy77dYexDPYlcuiGfclxZE8yOLEoHMvPw3POPhqmbQhtvNkiDs4Hl5-DTbH863_ViWaJKzMVKizcaNv-_WpPSsHnrU7b3_F1ahCm8MCDhZ7L2xzaVsdJqS7_GbjYZqXC5F34wghmjPsBMRPZ6_S17p0GLQ2zjkgsLFNaRN-_55oV5NLMm_mdOWPfL6hV9CYmhzAS_hIUbBMAP2wuIL_qTlzdAVsMrSKvFFLVr7uSQpY-7bA2J5VL09JPc7O235cU7NU7hjBMYMWhWcu4nbu-j2TmGW0dXsQhb2Bm6PqsSvLhnFM3eTgo3StSmfCLjQkR5hQ_UZ-xoDh3BePx2XrgOTM4b2_Bij6His08Bf45JS1RrhZHQsbYTNdP0wUiFH8VB28k9s0-yXIduztHiKJUtc0RILgzNuQpIX8wct7QjXxjFcoSaQ09-wRhfaCHfB0mABQoJrs3l32LGIsyQWhgEK8jwUPSSXB0KqdoE-YhVl4fhReVZqS-zg4utRfyBLQ1fOW8hF8zedYu-f8rqU9JMRWNK5gTw6BHGR8CaA=s943-no?authuser=0" width=200 height=200></center>
+<center><img src="https://i.pinimg.com/originals/ee/12/d1/ee12d1e5313e0a1b33b44e2c871f85b4.png" width=200 height=200></center>
 &nbsp
-<center><img src="https://lh3.googleusercontent.com/9O1mCWtUIlW_CLFyjGqQ_tV93n0NHeIE_tSP3EBrL-kug_hwcJD7Bh6zy7SwEjkHRVIX3ShItf9ObchKYJ_j_nMTK2ub93m4w3SRKxiI6qIHSefYqmrsJcJia1Gzyb4HO_la0bORAJ9oTqYxMslDURzI75FubxYYUSfw1kqjF0XphuXQYCHn0blXs1BnYuFqy6LmyU36xBWj4kK4PfklFUelAMg7CGrfFuTn6IdvsNFcdsfVdPiTPJPBytqXHRalJHYEoohju8PCHJlCdSsNzkV4sSdzdRNWnin2XorQ1GBzdNqQY9xey6dC7x6kuW0phNQeFhEFl1HHrXk6sE3UYDWdJmRR7lTztg5oM9rz_EJB496FvcoJ8Pvw2dP4QJNR2SPcAHiVaty0q2NQ9X7Zv4NYbupNDpLQbfCD7f9FFwuVSpQNHSucYeXGHOSzpIl5QK5vI03hkSkX6tisv6o577EQ6t3pr7FYMlukOn2XVxSGGw1SzKKLnRD9DZWGaawOzRXZlctfhtwMPyYIlxCFwtJBOfbVzVdp4aBYiABxz266Sy3CvARJsJWnEBSTNT759YE7TAN-DEJzcn_mgxbWWCGV8fJiPRTOIIA5iaquey6RJA0zobQBOh9KZ5hWxdUMymouc8QtBmglcIhI09pr3sqtxVr4CQhgeHzmQDBD8k95iaowypM-6-zQrP_4uQ=w633-h844-no?authuser=0" width=400 height=400></center>
+<center><img src="https://i.pinimg.com/originals/50/6c/59/506c593e4b8ae9b0b0c94c53ef657b3d.jpg" width=400 height=400></center>
 <CENTER> <font size=50 color="blue">MADHU!!!!!!!!!!</font></center>
 &nbsp
 <marquee direction="right" behaviour="alternate">
