--- a/mad2.html
+++ b/mad2.html
@@ -1,10 +1,10 @@
 <html>
 <head>
 <title>HBD</title>
-<center><h1><font size=100 color="purple">This site is especially made for you with love.
+<center><h1><font size=100 color="Pink">&nbspThis site is especially made for you with love.&nbsp
 On this special day, I hope this small gift of mine brings a smile on your face!!! 
-Enjoy the day MADDY!!</font></h1></center>
-<body bgcolor="blue">
-<img src="https://images.esellerpro.com/3274/I/222/38/lrgscaleIWG1310.jpg" width=500 height=500 border=10>
-<a href="mad1.html">CLICK HERE AGAIN</a></BODY>
+&nbspEnjoy the day MADDY!!</font></h1></center>
+<body bgcolor="white">
+<center><img src="https://images.esellerpro.com/3274/I/222/38/lrgscaleIWG1310.jpg" width=500 height=500 border=10></center>
+<center><a href="mad1.html">CLICK HERE AGAIN</a></center></BODY>
 </html>
